--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* To complete this project, first, I looked at the HTML doc and wrote down the order of every code. I then copied the CSS codes into a seperate document so I could start cutting them out and pasting them in the order to follow along with the HTML codes. I checked off my list of HTML codes as I moved the CSS codes until it was complete, pasted new order into the linked CSS document, and it is now more reader-friendly. */
+/* To complete this portion of the project, first, I looked at the HTML doc and wrote down the order of every code. I then copied the CSS codes into a seperate document so I could start cutting them out and pasting them in the order to follow along with the HTML codes. I checked off my list of HTML codes as I moved the CSS codes and updated the elements, until it was complete. I then pasted new order into the linked CSS document, and it is now more reader-friendly. I also removed some of the redundant coding, after declaring articles and sections. There was a lot of repititive code that had the same effects, so by eliminating the extra, and still getting the same effects, it's more reader-friendly. */
 
 * {
     box-sizing: border-box;
@@ -6,7 +6,8 @@
     margin: 0;
 }
 
-.header {
+/* changed from div class to just <header> in HTML */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -17,16 +18,16 @@ body {
     background-color: #d9dcd6;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header aside {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -34,11 +35,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header aside ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header aside ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -48,7 +49,7 @@ a {
     text-decoration: none;
 }
 
-.hero {
+object {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -61,14 +62,14 @@ p {
     font-size: 16px;
 }
 
-.content {
+article {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-/* In this area, I put all of the "sections" together in their codes, vs it being the tables for each section, the img for each section, then the h2 for each section. This way, all ".search-engine-optimization" codes are together, and so on */
-.search-engine-optimization {
+
+article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -77,48 +78,12 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization h2 {
+article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing img {
+article img {
     max-height: 200px;
 }
 
@@ -132,8 +97,9 @@ p {
     margin-left: 25px;
 }
 
-.benefits {
+section {
     margin-right: 20px;
+    margin-top: -640px;
     padding: 20px;
     clear: both;
     float: right;
@@ -142,63 +108,30 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/* In this area, I mimicked what I did above, and grouped everything together with it's class so it would be easier to edit for someone new like myself. All ".benefit-lead" is together, and so on */
 
-.benefit-lead {
+section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3 {
+section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img {
+section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
